common/force-app/main/default/objects/Activity/fields/aircall2gp__SMS_Direction__c.field-meta.xml
<CustomField>
    <fullName>aircall2gp__SMS_Direction__c</fullName>
    <label>SMS Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>