common/force-app/main/default/objects/Activity/fields/aircall2gp__SMS_Sent_From__c.field-meta.xml
<CustomField>
    <fullName>aircall2gp__SMS_Sent_From__c</fullName>
    <label>SMS Sent From</label>
    <type>Phone</type>
</CustomField>