common/force-app/main/default/objects/Activity/fields/Lead_price_range__c.field-meta.xml
<CustomField>
    <fullName>Lead_price_range__c</fullName>
    <formula>TEXT(Lead_ID__r.What_is_your_price_range__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead price range</label>
    <type>Text</type>
</CustomField>