common/force-app/main/default/objects/Activity/fields/Number_of_lead_attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_lead_attempts__c</fullName>
    <formula>TEXT(Lead_ID__r.Number_of_Attempts__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of lead attempts</label>
    <type>Text</type>
</CustomField>