common/force-app/main/default/objects/Activity/fields/TimeTrade_SF1__Meeting__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TimeTrade Meeting</label>
    <referenceTo>TimeTrade_SF1__Meeting__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>