common/force-app/main/default/objects/Activity/fields/What_best_describes_you__c.field-meta.xml
<CustomField>
    <fullName>What_best_describes_you__c</fullName>
    <formula>TEXT(Lead_ID__r.what_best_describes_you__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>What best describes you?</label>
    <type>Text</type>
</CustomField>