common/force-app/main/default/objects/Activity/fields/What_is_your_price_range__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_price_range__c</fullName>
    <label>What is your price range?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>